<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vispar</string>
    <string name="MySessions">Meet</string>
    <string name="Schedule">Schedule</string>
    <string name="Explore">Explore</string>
    <string name="Follow">Follow</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="share_subject">Discussion share from Vispar</string>
    <string name="no_app_to_share">Nothing to share</string>
    <string name="select_to_share">Select an app to share</string>
    <string name="copy_to_clipboard">Clipboard</string>
    <string name="clipboard_share">You can also invite your friends using the link, which is copied to clipboard</string>
    <string name="invite_friends">Invite Now</string>
    <string name="start_event">Start Event Now</string>
    <string name="join_event">Join An Event</string>
    <string name="join_other_title">Join Other Event</string>
    <string name="join_other_message">Type one\'s username</string>
    <string name="view_past_events">View Past Events</string>
    <string name="start_schedules">Schedule New Event</string>
    <string name="view_schedules">View Schedules</string>
    <string name="modify_schedules">Modify</string>
    <string name="invite_schedules">Invite People</string>
    <string name="invite_session_message">Join my Vispar session by clicking here: </string>
    <string name="invite_event_message">Book my Vispar event by clicking here: </string>
    <string name="event_is_public">Public</string>
    <string name="title_activity_start_event">Start A Event</string>
    <string name="title_activity_view_event">View A Event</string>
    <string name="title_activity_logout">Log out</string>
    <string name="event_title">Title</string>
    <string name="event_description">Description</string>
    <string name="event_start_time">Start Time</string>
    <string name="event_end_time">End Time</string>
    <string name="event_privacy">Privacy</string>
    <string name="event_public">Public</string>
    <string name="event_private">Private</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="logout_success">Successfully logged out</string>
    <string name="logout_fail">Cannot log out</string>
    <string name="loading_in_progress">Loading</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <string name="action_sendme_password">Reset my password</string>

</resources>
