<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vispar.MainActivity$PlaceholderFragment" >

    <ProgressBar
        android:id="@+id/goto_room_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
    <TextView
        android:id="@+id/goto_room_progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/loading_in_progress"
        android:visibility="gone" />

    <Button
        android:id="@+id/JoinOthers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/JoinMine"
        android:layout_alignRight="@+id/JoinMine"
        android:layout_below="@+id/JoinMine"
        android:layout_marginTop="52dp"
        android:text="@string/join_event" />

    <Button
        android:id="@+id/JoinMine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/start_event" />

    <Button
        android:id="@+id/Invite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/JoinMine"
        android:layout_alignLeft="@+id/JoinMine"
        android:layout_alignRight="@+id/JoinMine"
        android:layout_marginBottom="52dp"
        android:text="@string/invite_friends" />

</RelativeLayout>
