<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

     <Button
         android:id="@+id/InviteEvent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/StartEvent"
         android:layout_alignRight="@+id/StartEvent"
         android:layout_below="@+id/ViewEvent"
         android:layout_marginTop="86dp"
         android:text="@string/invite_schedules" />

    <Button
        android:id="@+id/ViewEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/StartEvent"
        android:layout_alignLeft="@+id/StartEvent"
        android:layout_alignRight="@+id/StartEvent"
        android:layout_marginBottom="36dp"
        android:text="@string/view_schedules" />

    <Button
        android:id="@+id/StartEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/start_schedules" />

</RelativeLayout>
